--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= ENV['AMAZON_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AMAZON_SECRET_ACCESS_KEY'] %>
-  region: us-east-1 #a priori, si tu es en France, il faut mettre ici : eu-west-3
-  bucket: wazo #Mets ici le nom de ton bucket. Par exemple : prisme
+  region: eu-west-3 #a priori, si tu es en France, il faut mettre ici : eu-west-3
+  bucket: agora-development.herokuapp.com-pictures-bucket #Mets ici le nom de ton bucket. Par exemple : prisme
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
